# xml-push

./: .gitignore  README.md  testHttpPullSv.hs  testHttpPullTlsCl.hs  testHttpPushTlsE.hs  testXmpp.hs  todo.md  xml-push.cabal
examples/: FilePusher.hs  TestPusher.hs  TestPusherT.hs  TestSimple.hs  httpPullCl.hs  httpPullSv.hs  httpPullTlsCl.hs  httpPullTlsSv.hs  httpPushE.hs  httpPushT.hs  httpPushTlsE.hs  httpPushTlsT.hs  httpServer.hs  httpTlsServer.hs  simple.hs  simpleClient.hs  simpleServer.hs  testHttpPushE.hs  testHttpPushT.hs  testMakeHttpPull.hs  testMakeHttpPullTls.hs  testMakeHttpPush.hs  testMakeHttpPushTls.hs  xmpp.hs  xmppSv.hs  xmppTls.hs  xmppTlsSv.hs
logs/: tls_server.md
src/Network/: XmlPush.hs
src/Network/XmlPush/: HttpPush.hs  Simple.hs  Tls.hs  Xmpp.hs
src/Network/XmlPush/Http/: Server.hs
src/Network/XmlPush/Http/Tls/: Server.hs
src/Network/XmlPush/HttpPull/: Client.hs  Server.hs
src/Network/XmlPush/HttpPull/Client/: Common.hs
src/Network/XmlPush/HttpPull/Server/: Body.hs  Common.hs
src/Network/XmlPush/HttpPull/Tls/: Client.hs  Server.hs
src/Network/XmlPush/HttpPull/Tls/Server/: Body.hs
src/Network/XmlPush/HttpPush/: Body.hs  Common.hs  Tls.hs
src/Network/XmlPush/HttpPush/Tls/: Body.hs
src/Network/XmlPush/Tls/: Client.hs  Server.hs
src/Network/XmlPush/Xmpp/: Common.hs  Server.hs  Tls.hs
src/Network/XmlPush/Xmpp/Server/: Common.hs
src/Network/XmlPush/Xmpp/Tls/: Server.hs
try/: xmppServerTls.hs
