build-type:	Simple
cabal-version:	>= 1.8

name:		xml-push
version:	0.0.0.0

library
    hs-source-dirs:	src
    exposed-modules:
        Network.XmlPush,
        Network.XmlPush.Xmpp, Network.XmlPush.Xmpp.Tls,
        Network.XmlPush.HttpPull.Client, Network.XmlPush.HttpPull.Server
        Network.XmlPush.HttpPull.Tls.Client, Network.XmlPush.HttpPull.Tls.Server,
        Network.XmlPush.HttpPush, Network.XmlPush.HttpPush.Tls
    build-depends:
        base == 4.*, peyotls == 0.1.*, simple-pipe == 0.0.*, xml-pipe == 0.0.*,
        handle-like == 0.1.*, monad-control == 0.3.*, transformers-base == 0.4.*,
        monads-tf == 0.1.*, bytestring == 0.10.*, xmpipe == 0.0.*, sasl == 0.0.*,
        random == 1.0.*, uuid == 1.3.*, stm == 2.4.*, crypto-random == 0.0.*,
        x509 == 1.4.*, x509-store == 1.4.*, tighttp == 0.0.*
    extensions:		DoAndIfThenElse
