build-type:	Simple
cabal-version:	>= 1.8

name:		xml-push
version:	0.0.0.0
stability:	Experimenmtal
author:		Yoshikuni Jujo <PAF01143@nifty.ne.jp>
maintainer:	Yoshikuni Jujo <PAF01143@nifty.ne.jp>
homepage:	https://github.com/YoshikuniJujo/xml-push/wiki

license:	BSD3
license-file:	LICENSE

category:	Network
synopsis:	Push XML from/to client to/from server over XMPP or HTTP
description:

extra-source-files:
    examples/TestPusher.hs
    examples/testXmpp.hs
    examples/testXmppTls.hs
    examples/testHttpPullCl.hs
    examples/testHttpPullSv.hs
    examples/testHttpPullTlsCl.hs
    examples/testHttpPullTlsSv.hs
    examples/testHttpPushT.hs
    examples/testHttpPushE.hs
    examples/testHttpPushTlsT.hs
    examples/testHttpPushTlsE.hs

source-repository	head
    type:	git
    location:	git://github.com/YoshikuniJujo/xml-push.git

source-repository	this
    type:	git
    location:	git://github.com/YoshikuniJujo/xml-push.git
    tag:	xml-push-0.0.0.0

library
    hs-source-dirs:	src
    exposed-modules:
        Network.XmlPush,
        Network.XmlPush.Xmpp, Network.XmlPush.Xmpp.Tls,
        Network.XmlPush.HttpPull.Client, Network.XmlPush.HttpPull.Server
        Network.XmlPush.HttpPull.Tls.Client, Network.XmlPush.HttpPull.Tls.Server,
        Network.XmlPush.HttpPush, Network.XmlPush.HttpPush.Tls
    build-depends:
        base == 4.*, peyotls == 0.1.*, simple-pipe == 0.0.*, xml-pipe == 0.0.*,
        handle-like == 0.1.*, monad-control == 0.3.*, transformers-base == 0.4.*,
        monads-tf == 0.1.*, bytestring == 0.10.*, xmpipe == 0.0.*, sasl == 0.0.*,
        random == 1.0.*, uuid == 1.3.*, stm == 2.4.*, crypto-random == 0.0.*,
        x509 == 1.4.*, x509-store == 1.4.*, tighttp == 0.0.*
    ghc-options:	-Wall
    extensions:		DoAndIfThenElse
